# leek

./: .gitignore  Cargo.toml  LICENSE  README.md  test.leek
compiler/: Cargo.toml  README.md
compiler/src/: ast.rs  error.rs  lexer.rs  lib.rs  main.rs  parser.rs  position.rs  reader.rs
compiler/src/backend/: mod.rs
compiler/src/backend/codegen/: mod.rs
compiler/src/backend/codegen/x86_linux_gnu/: mod.rs
compiler/src/backend/optimization/: mod.rs
compiler/src/backend/type_checking/: mod.rs
compiler/src/common/: config.rs  error.rs  lang.rs  mod.rs
compiler/src/frontend/: ast.rs  lexer.rs  mod.rs  parser.rs  position.rs  reader.rs
compiler/src/frontend/ast/: builder.rs  mod.rs
compiler/src/frontend/lexer/: mod.rs  test.rs  token.rs
compiler/src/middle/: mod.rs
compiler/src/middle/type_checking/: mod.rs
editors/vscode/: .vscodeignore  CHANGELOG.md  LICENSE  README.md  install.bat  language-configuration.json  package.json  vsc-extension-quickstart.md
editors/vscode/syntaxes/: leek.tmLanguage.json
examples/: 1_hello_world.leek  2_local_variables.leek  3_functions.leek  4_constant_variables.leek  5_static_variables.leek  6_structs.leek  7_struct_methods.leek  8_control_flow.leek  9_guard.leek
