[package]
name = "leek"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
clap = { version = "4.3.19", features = ["derive"] }
diff = "0.1.13"
indoc = "2.0.1"
itertools = "0.11.0"
mktemp = "0.5.0"
